--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="./src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Adelani Adelaja">
-    <meta name="description" content="This is Adelani Adelaja's second react task">
-    <title>Adelani Third React Task</title>
+    <meta name="description" content="This is Adelani Adelaja's fourth react task">
+    <title>Adelani Fourth React Task</title>
   </head>
   <body>
     <div id="root"></div>
